[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/character_select.gd" type="Script" id=1]
[ext_resource path="res://mobiles/armatures/humanoid_armature.tscn" type="PackedScene" id=2]
[ext_resource path="res://data/assets/misc/default_env.tres" type="Environment" id=4]
[ext_resource path="res://data/assets/3d/meshes/terrain/tavern.tres" type="ArrayMesh" id=5]
[ext_resource path="res://ui/labeled_button.tscn" type="PackedScene" id=6]
[ext_resource path="res://data/assets/2d/delete.png" type="Texture" id=7]

[node name="CharacterSelect" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.986779, -0.028143, 0.159607, 0, 0.984808, 0.173648, -0.162069, -0.171352, 0.971788, 0.845777, 2.44069, 6.19197 )
environment = ExtResource( 4 )
fov = 28.9

[node name="Armature" parent="." instance=ExtResource( 2 )]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="NameList" type="VBoxContainer" parent="Control/HBoxContainer"]
margin_bottom = 540.0

[node name="HBoxContainer3" type="HBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 0
alignment = 2

[node name="ItemList" type="VBoxContainer" parent="Control/HBoxContainer3"]
margin_left = 964.0
margin_right = 964.0
margin_bottom = 540.0

[node name="NameEditButton" parent="Control" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -44.0
margin_right = 50.0
margin_bottom = 0.0

[node name="Label" parent="Control/NameEditButton" index="0"]
text = "Character Name"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -204.0
margin_top = -44.0

[node name="JoinButton" parent="Control/HBoxContainer2" instance=ExtResource( 6 )]
margin_top = 0.0
margin_bottom = 44.0

[node name="Label" parent="Control/HBoxContainer2/JoinButton" index="0"]
text = "Join Test Server"

[node name="BackButton" parent="Control/HBoxContainer2" instance=ExtResource( 6 )]
margin_left = 104.0
margin_top = 0.0
margin_right = 204.0
margin_bottom = 44.0

[node name="Label" parent="Control/HBoxContainer2/BackButton" index="0"]
text = "Main Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -92.0
margin_right = 100.0

[node name="NewCharacterButton" parent="Control/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 0.0
margin_bottom = 44.0

[node name="Label" parent="Control/VBoxContainer/NewCharacterButton" index="0"]
text = "New Character"

[node name="DeleteButton" parent="Control/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 48.0
margin_bottom = 92.0

[node name="Label" parent="Control/VBoxContainer/DeleteButton" index="0"]
text = "Delete"

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer/DeleteButton"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true

[node name="NameEntryForm" type="Popup" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -154.5
margin_top = -46.0
margin_right = 154.5
margin_bottom = 46.0

[node name="NameEntry" type="LineEdit" parent="Control/NameEntryForm"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -110.0
margin_right = 63.0
margin_bottom = -70.0
align = 1
placeholder_text = "Enter name..."
placeholder_alpha = 0.1

[node name="ColorPickerButton" type="ColorPickerButton" parent="Control/NameEntryForm"]
anchor_left = 0.502
anchor_top = 0.5
anchor_right = 0.502
anchor_bottom = 0.5
margin_left = -13.618
margin_top = -12.0
margin_right = -1.61795
margin_bottom = 8.0
rect_rotation = -89.9999

[node name="Background" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -9.76626, -0.10158, -1.38176 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null

[editable path="Control/NameEditButton"]
[editable path="Control/HBoxContainer2/JoinButton"]
[editable path="Control/HBoxContainer2/BackButton"]
[editable path="Control/VBoxContainer/NewCharacterButton"]
[editable path="Control/VBoxContainer/DeleteButton"]
